--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
             </div>
             <div class="slide slide4">
                 <div class="slide-content">
-                    <span>Image Four
-
-                    </span>
+                    <span>Image Four</span>
+                </div>
+            </div>
+            <div class="slide slide5">
+                <div class="slide-content">
+                    <span>Image Five</span>
                 </div>
             </div>
         </div>
         <div id="arrow-right" class="arrow">
-            
+
         </div>
     </div>
 
